# dim-hackathon

./: .gitignore  AGENTS.md  README.md  SETUP.md  plan.md  pyproject.toml
docs/: debugging.md  dimos-agent-findings.md  gpu-host-setup.md  pawtrack-design.md  robot-map-scan.md
integration/: greeter_agentic.py  pawdribble_agentic.py  pawdribble_agentic_relocalization.py  pawtrack_agentic.py  pawtrack_agentic_relocalization.py
scripts/: go2_exploration.py  run_greeter_sim.sh  run_pawdribble.py  run_pawtrack.py  sim_person_pose.py
src/pawdribble/: __init__.py  ball_movement_monitor.py  ball_movement_motion_fallback.py  ball_movement_state.py  ground_raycast.py  image_source.py  kick_profile.py  qwen_china.py  skill_container.py  system_prompt.py
src/pawtrack/: __init__.py  approach_geometry.py  greeter_container.py  greeter_state.py  ground_raycast.py  identify.py  image_source.py  motion_fallback.py  occupancy.py  qwen_china.py  skill_container.py  system_prompt.py  track_state.py  visited_registry.py
tests/: test_approach_geometry.py  test_ball_movement_monitor.py  test_ball_movement_motion_fallback.py  test_ball_movement_state.py  test_greeter_agent_e2e.py  test_greeter_container.py  test_greeter_state.py  test_ground_raycast.py  test_identify.py  test_kick_profile.py  test_motion_fallback.py  test_no_dimos_import.py  test_occupancy.py  test_skill_container.py  test_track_state.py  test_visited_registry.py
